add basic auth